--- a/MLProject/conda.yaml
+++ b/MLProject/conda.yaml
@@ -3,9 +3,9 @@ channels:
   - conda-forge
 dependencies:
   - python=3.8
-  - pip
   - scikit-learn=1.0.2
   - pandas=1.4.2
   - numpy=1.22.3
   - pip:
     - mlflow==2.3.1
+    - scikit-learn==1.0.2
