--- a/.github/workflows/train_model.yml
+++ b/.github/workflows/train_model.yml
@@ -12,12 +12,20 @@ jobs:
         with:
           python-version: '3.8'
           
-      - name: Install MLflow
-        run: pip install mlflow==2.3.1
-      
-      - name: Run MLflow Project
+      - name: Setup Environment
         run: |
-          mlflow run ./MLProject --env-manager=local --experiment-name="CI_Pipeline"
+          # Create clean environment
+          python -m venv venv
+          source venv/bin/activate
+          pip install --upgrade pip
+          pip install scikit-learn==0.24.2 mlflow==1.30.0 pandas==1.2.5
+
+      - name: Run Training
+        run: |
+          source venv/bin/activate
+          mlflow run ./MLProject \
+            --env-manager=local \
+            --experiment-name="CI_Pipeline"
           
       - name: Upload Results
         uses: actions/upload-artifact@v4
