--- a/MLProject/conda.yaml
+++ b/MLProject/conda.yaml
@@ -3,8 +3,9 @@ channels:
   - conda-forge
 dependencies:
   - python=3.8
-  - scikit-learn=0.24.2
-  - pandas=1.2.5
-  - numpy=1.20.3
+  - pip
+  - scikit-learn=1.0.2
+  - pandas=1.4.2
+  - numpy=1.22.3
   - pip:
-    - mlflow==1.30.0
+    - mlflow==2.3.1
