--- a/.github/workflows/mlproject.yml
+++ b/.github/workflows/mlproject.yml
@@ -18,10 +18,10 @@ jobs:
           
       - name: Create MLflow directory
         run: mkdir -p MLProject/mlruns
-          
+
       - name: Run MLflow project
         run: |
-          mlflow run . --env-manager=local
+          mlflow run MLProject --env-manager=local
           
       - name: Upload Results
         uses: actions/upload-artifact@v4
